<resources>
    <string name="app_name">SmartPointS Seller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="from_date"><u>From Date</u></string>
    <string name="to_date"><u>To Date</u></string>
    <string name="policy"><u>Privacy Policy</u> and </string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
    <string name="spinner_title">Select</string>
    <string name="recenTransactions">Last 10 Transaction </string>
    <string name="a">what is smart points?</string>
    <string name="aans">Smartpoints  is a reward program that enables you to "earn points every time you make a purchase"
        at a Smartpoints  Store, you are instantly rewarded with Smartpoints which is credited into your Smartpoints
        Account</string>
    <string name="b">.How does the reward system work? </string>
    <string name="bans">Its simple. When you spend at any Smartpoints  Store you earn a reward as a token
        of thank you from our partner Store for doing business with them. For e.g.: If they are running an assured reward
        of 5% Smartpoints  reward and you make a purchase of INR 1000,
        you would be entitled to EARN 50 Smartpoints. </string>
    <string name="c">are there any joining fee?</string>
    <string name="cans">No its free and always will be</string>
    <string name="d">what is reedem?</string>
    <string name="dans">. You can use Smartpoints  reward program by just downloading it from the google playstore or
        taking the app from our partner and installing it on to your device and you are ready to earn smartpoints.?</string>
    <string name="e">What is my Eligibility criteria</string>
    <string name="eans">. You should be having a smartphone with android version 4.0 or above.</string>
    <string name="f">Is it compulsory to have the Smartpoints  app?</string>
    <string name="fans">Yes its compulsory. And there are great advantages if you have the app! track the Smartpoints  you
        recieved from our Smartpoints  Stores at your fingertips Manage your Smartpoints  account,smartpoints  earned and
        redeemed across Stores . Stay updated about latest offers from all the retailers. As new retailers keep joining the
        program, their offers will be instantly available to you</string>
    <string name="g">Will I get a card that I need to carry every time I spend at a Smartpoints  Store? </string>
    <string name="gans"> No, its a card-less program. Your smartphone is your unique identity Every time you wish to do a
        transaction at a Smartpoints  Store, all you have to do is scan the qr code and follow the steps. </string>
    <string name="h">How do I track my Smartpoints</string>
    <string name="hans">You can check your Smartpoints  in our mobile app.</string>
    <string name="i">How does the merchant know whether I am a Smartpoints  member or not? How do I identify myself? </string>
    <string name="ians">There is no physical or digital card as your identity. It is your smartphone which is your unique identity.
        If you are not a Smartpoints  member yet, when you are in any of the Smartpoints  Store, you can download  our app from google
        playstore or ask the owner of the store to give you the app.</string>
    <string name="j">What is the process to Earn, Track and Redeem my Smartpoints?</string>
    <string name="jans">. Once you install the smartpoints app you can find out our merchant
     partners. Spot the Smartpoints  logo, at the transacting Store to earn Smartpoints. You can track your accumulated Smartpoints  on our Smartpoints
        app or by calling us on our helpline number. Whenever you shop at any Smartpoints  Store, you can redeem your Smartpoints  against your bill.
    </string>
    <string name="k">What is the value of my Smartpoints ?</string>
    <string name="kans">One Smartpoint  is equal to 1 rupee.</string>
    <string name="title_activity_ad_mobs">AdMobsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="The_Terms_and_Conditions_Terms">The Terms and Conditions ("Terms") explain the nature and scope of the relationship between smartpoints {owned by Bizzmark }  herein referred to as "smartpoints" or "We" (as owner and management for the program) and you, for downloading, accessing or using the mobile applications, websites or other products and services of Bizzmark . These terms affect your legal rights and In the event you use a service, feature, orfunctionality that is operated by a thirdparty and made available through ourServices (including Services we jointly offerwith the third party), each partys terms willgovern as to the respective partysrelationship with you.Please read these terms carefully, beforeusing our services.</string>
    <string name="This_mobile_application">"1. This mobile application "smartpoints" owned by the partnership firm Bizzmark incorporated under the partnership Act,1932 and having its office at  205 pavani kamal opposite sbh bank Abids Hyderabad 50001 and such expression shall unless repugnant to the context of meaning thereof, be deemed to mean and include its successors and permitted assigns."\n
    2. "smartpoints Member" shall mean an end customer, who is enrolled as a member of smartpoints holding a valid unique membership number with the smartpoints loyalty system programme."\n
    3. . "smartpoints Member" shall mean an end customer, who is enrolled as a member of smartpoints holding a valid unique membership number with the smartpoints loyalty system programme."\n
    4. "smartpoints Merchants" shall mean any or all of the present or future entities, Merchants, shops, departmental stores, airlines, hotels, restaurants, car rental companies and other participating establishments in the program whether with online or offline presence, in agreement with smartpoints, where smartpointsMember can accumulate smartpoints for purchase of goods and services."\n
    5. "smartpoints" is also the unit currency of the program. smartpoints Member is awarded smartpoints for shopping at Stores registered with smartpoints programme."\n
    6. "smartpoints" means any offer, benifits, discount, on products of smartpoints  Merchants."\n
    7. ""smartpoints Program" shall mean a multi-merchant Cashback program for end customers."\n
    8. "Redemption" means any activity, which results in exchange of smartpoints by a smartpoints Member for discounts or offers at smartpoints Merchants."\n
    </string>
    <string name="The_smartpoints_Member_and_smartpointsMerchants">1. The smartpoints Member and smartpointsMerchants agree that by using thesmartpoints Program or byregistering for the services, he/sheis deemed to have read and understoodthese Terms and confirms thathe/she is bound by these Terms andany changes to it from time to time andsuch other terms as specified by smartpoints from time to time.\n
2. smartpoints membership is valid for lifetime for the smartpoints Member unless terminated in accordance with these terms and conditions.\n
3. smartpoints membership is non-transferable, except as specified in these Terms. smartpoints is non-negotiable, non-redeemable by cash and cannot be gifted, awarded or rewarded to any other person than a smartpoints Member.\n
4. smartpoints Member will be personally liable for any and all costs, taxes, charges, claims or liabilities of whatever nature arising from the provision or availability of benefits , facilities or arrangements provided or made available to a smartpoints Member by smartpoints Merchants, as a result of his/her membership in the smartpoints loyalty Program.\n
5. smartpoints reserves the right at any time in its absolute discretion and without giving notice to a smartpoints  Member to deactivate the smartpoints  membership.\n
6. We will endeavour to ensure that the services, benefits, facilities and arrangements as expressed or advertised by the smartpoints Merchants and smartpoints will be available to the smartpoints Member. However, smartpoints will not be liable for any loss or damage, whether direct or indirect, arising from the provision or non-provision whether whole or part, of any such services, benefits ,facilities or any other arrangements bythe smartpoints Merchants.\n
7. When a smartpoints Member seeks to use or obtain any of the services, benefits, facilities and arrangements as offered bythe smartpoints Merchant, the provisions of such services, benefits, facilities or arrangements will be subject to the respective terms and conditions of the smartpoints Merchant, being the provider of the said benefits, facilities and arrangements.\n
8. Smartpoints shall not be liable for any loss or damage, whether direct or indirect, resulting from termination or change of the smartpoints loyalty Program or any of its facilities, benefits or arrangements which are made available to the smartpoints Member, including without any limitation, smartpoints Merchants withdrawal or the withdrawal or limiting of any such services, benefits or facilities.\n
9. The smartpoints loyalty Program may be modified at the sole discretion of smartpoints from time to time without intimation to the smartpoints  Member.\n
10. smartpoints shall not be liable in the event it fails to fulfil any of its obligations under this terms and conditions due to flood, earthquake, storm, cyclone or any other acts of god of similar nature, war, strike, lockout, or governmental or judicial or change in law or for any other reasons beyond its control.\n
11. A waiver of any of the Terms by smartpoints shall not be deemed to be a continuing waiver, but shall apply solely to the instances to which the waiver is directed.\n
12. All smartpoints dispute or complaints older than one working day from the date of the transaction will not be entertained. The smartpoints Member must provide proof of transaction as discount or offer dispute.\n
13. The smartpoints Member acknowledges and understands that we are merely an intermediary and does not assume any liability or acquire any right, title or interest in the smartpoints loyalty Program. We are only engaged in the management however all the smartpoints discounts or  offers are offered by the smartpoints Merchants to the smartpoints Members directly and are responsible for the  fulfilment of all obligations to the smartpoints Member.\n
14. It is compulsory for a smartpoints member to be logged in or registered with smartpoints to avail the option to redeem their smartpoints.\n
15. If a smartpoints member is not registered with smartpoints loyalty system and loses his Smartphone he used to earn smartpoints  then there is no way he can get or ask for those lost points and smartpoints is not liable for any of this kind of losses.\n
</string>
</resources>