<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bizzmark.seller.sellerwithoutlogin.login.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/header"
        android:layout_weight="0.54"
        android:background="@color/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seller Login"
            android:textSize="22dp"
            android:textColor="#000"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_alignStart="@+id/linearLayout2"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            android:id="@+id/textView2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/header"
        android:layout_alignStart="@+id/linearLayout4">
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="15dp"
            android:hint="Login Id"
            android:padding="5dp"
            android:drawableLeft="@drawable/ic_id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            android:textColor="@color/colorPrimaryDark"
            android:hint="Login Password"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignin"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/loginbutton"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignStart="@+id/header">

        <TextView
            android:text="By Signing up you confirm that you have read and agree to the our"
            android:id="@+id/textViewSignUp"
            android:textSize="10dp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/policy"
                android:textSize="10dp"
                android:textColor="#000"
                android:text="@string/policy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/terms"
                android:textSize="10dp"
                android:textColor="#000"
                android:text="@string/terms"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
