<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_faq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bizzmark.seller.sellerwithoutlogin.FAQ"
    android:background="#4DB6AC">

    <!--Header aligned at top-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/header"
        android:layout_weight="0.54"
        android:background="@color/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_white_24dp"
            android:layout_marginLeft="13dp"
            android:id="@+id/backbut"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="13dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help"
            android:textSize="22dp"
            android:textColor="#fff"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/container"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            //1

            <Button
                android:id="@+id/expandableButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton1"
                android:paddingRight="10dp"
                android:text="What is Smart Point Seller"
                android:textColor="#000000"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton1"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:textColor="#000000"
                    android:text="@string/aans"/>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            //2

            <Button
                android:id="@+id/expandableButton2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout1"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton2"
                android:paddingRight="10dp"
                android:text="How Does Reward System Work"
                android:textColor="#000000" />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton2"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:textColor="#000000"
                    android:text="@string/bans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            //3

            <Button
                android:id="@+id/expandableButton3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout3"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton3"
                android:paddingRight="10dp"
                android:text="Are There Any Joining Fee"
                android:textColor="#000000" />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton3"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/cans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            //4


            <Button
                android:id="@+id/expandableButton4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout3"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton4"
                android:paddingRight="10dp"
                android:text="What Is Reedem?"
                android:textColor="#000000" />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton4"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/cans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            //5

            <Button
                android:id="@+id/expandableButton5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout4"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton5"
                android:paddingRight="10dp"
                android:text="What Is My Eligibility Criteria"
                android:textColor="#000000" />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton5"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/cans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            //6


            <Button
                android:id="@+id/expandableButton6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout5"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton6"
                android:paddingRight="10dp"
                android:text="Is It Compulsory To Have Smart Points App?"
                android:textColor="#000000" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton6"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/cans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



            //7

            <Button
                android:id="@+id/expandableButton7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout6"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton7"
                android:paddingRight="10dp"
                android:text="Will I Get Any Card?  "
                android:textColor="#000000" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton6"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/gans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            //8


            <Button
                android:id="@+id/expandableButton8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout7"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton8"
                android:paddingRight="10dp"
                android:text="How Do I Track My Points?"
                android:textColor="#000000" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton8"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/hans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



            //9

            <Button
                android:id="@+id/expandableButton9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout8"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton9"
                android:paddingRight="10dp"
                android:text="How Does Customer Known Whether I Am Smart Point Member OR Not And How Do I Identify Myself?"
                android:textColor="#000000" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton9"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/ians" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



            //10


            <Button
                android:id="@+id/expandableButton10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout9"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton10"
                android:paddingRight="10dp"
                android:text="What Is The Process of Earn And Reedem Points And How Do I Track"
                android:textColor="#000000" />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton10"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:textColor="#000000"
                    android:text="@string/jans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



            //11


            <Button
                android:id="@+id/expandableButton11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout10"
                android:background="#4DB6AC"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton11"
                android:paddingRight="10dp"
                android:text="What Is The Value Of SmartPoints"
                android:textColor="#000000" />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton11"
                android:background="#80CBC4"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="bounce"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textColor="#000000"
                    android:text="@string/kans" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>
